syntax = "proto3";

package gabion.analysis.aspf_mutation_log;

message MutationRecord {
  string op_id = 1;
  string op_kind = 2;
  string payload_json = 3;
}

message MutationSnapshot {
  uint64 seq = 1;
  string state_json = 2;
}

message EventEnvelope {
  uint64 schema_version = 1;
  uint64 sequence = 2;
  string run_id = 3;
  MutationRecord record = 4;
}

message SnapshotEnvelope {
  uint64 schema_version = 1;
  string run_id = 2;
  uint64 replay_cursor = 3;
  MutationSnapshot snapshot = 4;
}

message ArchiveManifest {
  uint64 schema_version = 1;
  uint64 projection_version = 2;
  string run_id = 3;
  repeated uint64 event_sequences = 4;
  repeated uint64 snapshot_sequences = 5;
}

message CommitMarker {
  uint64 schema_version = 1;
  string run_id = 2;
  uint64 last_durable_sequence = 3;
}
